[build-system]
requires = ["setuptools>=60", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kytea"
description = "A text analysis toolkit KyTea Python wrapper"
authors = [
  {name = "Aki Ariga", email = "chezou@gmail.com"}
]
maintainers = [
  {name ="Aki Ariga", email = "chezou@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Text Processing :: Linguistic",
]
keywords = [
  "KyTea",
  "NLP",
  "Japanese morphological analyzer",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/chezou/Mykytea-python"
"Bug Reports" = "https://github.com/chezou/Mykytea-python/issues"
"Funding" = "https://github.com/sponsors/chezou"

[tool.setuptools_scm]
write_to = "lib/kytea/_version.py"
