[metadata]
name = kytea
description = A text analysis toolkit KyTea binding
long_description = file: README.metadata
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/chezou/Mykytea-python
author = Aki Ariga
author_email = chezou@gmail.com
license = MIT license
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Text Processing :: Linguistic
project_urls =
    Source = https://github.com/chezou/Mykytea-python
    Tracker = https://github.com/chezou/Mykytea-python/issues
keywords = KyTea, NLP, Japanese morphological analyzer
